# learnC_2

./: CMakeLists.txt  README.md  main.c
arrays/: CMakeLists.txt  array.c
dp/: CMakeLists.txt  dp.c
include/: array.h  dp.h  linked_list.h  palindrome.h  sortings.h
linked_list/: CMakeLists.txt  linked_list.c
palindrome/: CMakeLists.txt  palindrome.c
sortings/: CMakeLists.txt  sortings.c
tests/: CMakeLists.txt  hello_test.cpp
